--- a/index.html
+++ b/index.html
@@ -146,7 +146,21 @@
     /* Flips the svg and makes the animation to move left-to-right */
     transform: scaleX(-1);
     }
+    @media only screen and (max-width: 768px) {
+        .wrapper {
+            display: grid;
+            grid-template-columns: 1fr;
+            padding: 1em;
+            grid-row-gap: 100px;
+  }
 
+    #options{ 
+        margin: auto;
+        margin-top: -100px;
+
+
+    }
+}
 </style>
 <head>
     <meta charset="UTF-8">
