--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         background: #000428;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        font-family: Tahoma, sans-serif;
+        font-family: OCR A Std, monospace;
         color: white;
     }
 
@@ -168,7 +168,7 @@
     <title>Pomodoro</title>
 </head>
 <body>
-    <h1>Relógio pomodoro </h1>
+    <h1>Relógio Pomodoro </h1>
    <div class="wrapper">  
        <div></div>
     <div id="caixa">
